test/integration/tests/not.output
-1 
 0 
-2 
Error on line 40: string cannot be converted to numeric
