test/integration/tests/not.bas
10 PRINT NOT 0
20 PRINT NOT -1
30 PRINT NOT 1
40 PRINT NOT "abc"
